fix(Datamaper): Prevent mapping lines overflow the container

--- a/packages/ui/src/components/View/SourceTargetView.scss
+++ b/packages/ui/src/components/View/SourceTargetView.scss
@@ -2,6 +2,12 @@
   height: 100%;
   overflow-x: auto;
 
+  &__container {
+    height: 100%;
+    position: relative;
+    overflow: hidden;
+  }
+
   &__source-split {
     width: 30%;
     min-width: 300px;
